added images in professionals

--- a/app/src/main/res/layout/activity_user_professional_first.xml
+++ b/app/src/main/res/layout/activity_user_professional_first.xml
@@ -6,62 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".UserProfessionalFirstActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Subjects"
-        android:gravity="center_horizontal"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:textAppearance="@style/Theme.AppCompat"
-        android:id="@+id/headingSubjects" />
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollViewOfSubjects"
-        android:layout_below="@id/headingSubjects">
-
+        android:layout_height="match_parent"
+        android:id="@+id/scrollViewOfSubjects">
 
         <GridLayout
             android:id="@+id/gdView"
             android:layout_width="match_parent"
-            android:layout_height="443dp"
+            android:layout_height="match_parent"
             android:layout_below="@+id/headingSubjects"
             android:layout_marginTop="10dp"
             android:alignmentMode="alignMargins"
             android:columnCount="1"
             android:columnOrderPreserved="false"
-            android:padding="14dp"
             android:rowCount="4"
-            android:rowOrderPreserved="true">
+            android:rowOrderPreserved="true"
+            android:padding="14dp">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/AnatomyCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:clickable="true"
                 app:cardBackgroundColor="#4c97e7"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
+                app:cardElevation="8dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
+                    android:background="@drawable/anatomy"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Anatomy"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -73,29 +61,29 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/PhysiologyCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
                 android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:clickable="true"
                 app:cardBackgroundColor="#4c97e7"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
+                app:cardElevation="8dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
+                    android:background="@drawable/physiology"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Physiology"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -107,29 +95,29 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/BiochemistryCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
                 android:clickable="true"
                 app:cardBackgroundColor="#4c97e7"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
+                app:cardElevation="8dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/biochemistry">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Biochemistry"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -141,22 +129,22 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/firstProfessionalMockTestCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
                 android:layout_row="3"
                 android:layout_rowWeight="1"
                 android:clickable="true"
                 app:cardBackgroundColor="#4c97e7"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
+                app:cardElevation="8dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -184,6 +172,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
+        android:visibility="gone"
         android:layout_marginBottom="22dp"
         android:layout_marginRight="22dp"
         app:srcCompat="@drawable/ic_open_with_black"
