--- a/app/src/main/res/layout/activity_professional1st.xml
+++ b/app/src/main/res/layout/activity_professional1st.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Professional1stActivity">
 
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Subjects"
@@ -14,7 +14,7 @@
         android:textSize="40sp"
         android:textStyle="bold"
         android:textAppearance="@style/Theme.AppCompat"
-        android:id="@+id/headingSubjects" />
+        android:id="@+id/headingSubjects" />-->
 
     <ScrollView
         android:layout_width="match_parent"
@@ -22,11 +22,10 @@
         android:id="@+id/scrollViewOfSubjects"
         android:layout_below="@id/headingSubjects">
 
-
         <GridLayout
             android:id="@+id/gdView"
             android:layout_width="match_parent"
-            android:layout_height="443dp"
+            android:layout_height="match_parent"
             android:layout_below="@+id/headingSubjects"
             android:layout_marginTop="10dp"
             android:alignmentMode="alignMargins"
@@ -39,10 +38,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/AnatomyCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -54,14 +54,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/anatomy">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Anatomy"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -73,10 +72,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/PhysiologyCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -88,14 +88,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/physiology">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Physiology"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -107,10 +106,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/BiochemistryCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -122,14 +122,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/biochemistry">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Biochemistry"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -153,7 +152,8 @@
         android:layout_marginBottom="22dp"
         android:layout_marginRight="22dp"
         app:srcCompat="@drawable/ic_open_with_black"
-        tools:ignore="VectorDrawableCompat" />
+        tools:ignore="VectorDrawableCompat"
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
