--- a/app/src/main/res/layout/activity_professional3rd.xml
+++ b/app/src/main/res/layout/activity_professional3rd.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Professional3rdActivity">
 
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Subjects"
@@ -14,7 +14,7 @@
         android:textSize="40sp"
         android:textStyle="bold"
         android:textAppearance="@style/Theme.AppCompat"
-        android:id="@+id/headingSubjects" />
+        android:id="@+id/headingSubjects" />-->
 
     <ScrollView
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
         <GridLayout
             android:id="@+id/gdView"
             android:layout_width="match_parent"
-            android:layout_height="443dp"
+            android:layout_height="match_parent"
             android:layout_below="@+id/headingSubjects"
             android:layout_marginTop="10dp"
             android:alignmentMode="alignMargins"
@@ -38,10 +38,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/spmCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -53,14 +54,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
+                    android:background="@drawable/spm"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="SPM"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -72,10 +72,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/entCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -87,14 +88,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
+                    android:background="@drawable/ent"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="ENT"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -106,10 +106,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/opthaCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -121,14 +122,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
+                    android:background="@drawable/optha"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Optha"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
