--- a/app/src/main/res/layout/activity_professionals.xml
+++ b/app/src/main/res/layout/activity_professionals.xml
@@ -9,49 +9,50 @@
     <GridLayout
         android:id="@+id/gdViewOfProfessional"
         android:layout_width="match_parent"
-        android:layout_height="332dp"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/title"
-        android:layout_weight="8"
-        android:padding="14dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="10dp"
+        android:alignmentMode="alignMargins"
         android:columnCount="1"
         android:columnOrderPreserved="false"
+        android:padding="14dp"
         android:rowCount="1"
-        android:rowOrderPreserved="true"
-        android:alignmentMode="alignMargins"
-        android:layout_marginTop="10dp">
+        android:rowOrderPreserved="true">
 
         <!--row 1-->
         <!--col 1-->
         <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_columnWeight="1"
-            android:layout_margin="16dp"
+            android:id="@+id/firstProfessionalCard"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:clickable="true"
             app:cardBackgroundColor="#4c97e7"
             app:cardCornerRadius="8dp"
-            app:cardElevation="8dp"
-            android:id="@+id/firstProfessionalCard"
-            android:clickable="true"
-            >
+            app:cardElevation="8dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_row="0"
                 android:layout_column="0"
                 android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_row="0"
+                android:background="@drawable/professional1"
                 android:orientation="vertical">
 
-                <TextView
+                <!--<TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="First Professional"
                     android:textAlignment="center"
                     android:textSize="18dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold" />-->
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
@@ -59,33 +60,33 @@
 
         <!--col 2-->
         <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="16dp"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardElevation="8dp"
-            app:cardCornerRadius="8dp"
-            android:clickable="true"
             android:id="@+id/secondProfessionalCard"
-            >
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:layout_marginTop="10dp"
+            android:clickable="true"
+            app:cardBackgroundColor="#4c97e7"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
 
             <LinearLayout
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_row="0"
                 android:layout_column="0"
-                android:layout_row="0">
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:background="@drawable/professional2"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="Second Professional"
+                    android:textAlignment="center"
                     android:textSize="18dp"
-                    android:textAlignment="center" />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -94,32 +95,33 @@
         <!--row 2-->
         <!--col 1-->
         <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="16dp"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardElevation="8dp"
-            app:cardCornerRadius="8dp"
             android:id="@+id/thirdProfessionalPartOneCard"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:layout_marginTop="10dp"
             android:clickable="true"
-            >
+            app:cardBackgroundColor="#4c97e7"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
 
             <LinearLayout
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_row="0"
                 android:layout_column="0"
-                android:layout_row="0">
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:background="@drawable/professional3"
+                android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="Third Professional Part 1"
+                    android:textAlignment="center"
                     android:textSize="18dp"
-                    android:textAlignment="center" />
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
@@ -128,32 +130,33 @@
 
         <!--col 2-->
         <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="16dp"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardElevation="8dp"
-            app:cardCornerRadius="8dp"
             android:id="@+id/thirdProfessionalPartTwoCard"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:layout_marginTop="10dp"
             android:clickable="true"
-            >
+            app:cardBackgroundColor="#4c97e7"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
 
             <LinearLayout
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_row="0"
                 android:layout_column="0"
-                android:layout_row="0">
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:background="@drawable/professional4"
+                android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="Third Professional Part 2"
+                    android:textAlignment="center"
                     android:textSize="18dp"
-                    android:textAlignment="center" />
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
