--- a/app/src/main/res/layout/activity_user_professional_second.xml
+++ b/app/src/main/res/layout/activity_user_professional_second.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".UserProfessionalSecondActivity">
 
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Subjects"
@@ -14,18 +14,18 @@
         android:textSize="40sp"
         android:textStyle="bold"
         android:textAppearance="@style/Theme.AppCompat"
-        android:id="@+id/headingSubjects" />
+        android:id="@+id/headingSubjects" />-->
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/scrollViewOfSubjects"
         android:layout_below="@id/headingSubjects">
 
         <GridLayout
             android:id="@+id/gdView"
             android:layout_width="match_parent"
-            android:layout_height="443dp"
+            android:layout_height="match_parent"
             android:layout_below="@+id/headingSubjects"
             android:layout_marginTop="10dp"
             android:alignmentMode="alignMargins"
@@ -38,10 +38,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/pathologyCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -50,17 +51,16 @@
                 app:cardElevation="8dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/pathology">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Pathology"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -72,10 +72,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/pharmacologyCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -84,17 +85,16 @@
                 app:cardElevation="8dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/pharmacology">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Pharmacology"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -106,10 +106,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/microbiologyCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -118,17 +119,16 @@
                 app:cardElevation="8dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
+                    android:background="@drawable/microbiology"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Microbiology"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -140,10 +140,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/fmtCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="3"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -152,17 +153,16 @@
                 app:cardElevation="8dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
+                    android:background="@drawable/fmt"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="FMT"
                         android:textAlignment="center"
                         android:textSize="18dp"
                         android:textStyle="bold" />
@@ -174,10 +174,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/secondProfessionalMockTestCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="4"
                 android:layout_rowWeight="1"
                 android:clickable="true"
