--- a/app/src/main/res/layout/activity_user_professional_third_one.xml
+++ b/app/src/main/res/layout/activity_user_professional_third_one.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".UserProfessionalThirdOneActivity">
 
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Subjects"
@@ -14,18 +14,18 @@
         android:textSize="40sp"
         android:textStyle="bold"
         android:textAppearance="@style/Theme.AppCompat"
-        android:id="@+id/headingSubjects" />
+        android:id="@+id/headingSubjects" />-->
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/scrollViewOfSubjects"
         android:layout_below="@id/headingSubjects">
 
         <GridLayout
             android:id="@+id/gdView"
             android:layout_width="match_parent"
-            android:layout_height="443dp"
+            android:layout_height="match_parent"
             android:layout_below="@+id/headingSubjects"
             android:layout_marginTop="10dp"
             android:alignmentMode="alignMargins"
@@ -38,10 +38,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/spmCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="0"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -53,8 +54,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/spm">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -72,10 +73,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/entCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="1"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -87,8 +89,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/ent">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -106,10 +108,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/opthaCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="2"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -121,8 +124,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/optha">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -140,10 +143,11 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/thirdProfessionalPartOneMockTestCard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
-                android:layout_margin="16dp"
+                android:layout_margin="2dp"
+                android:layout_marginTop="10dp"
                 android:layout_row="3"
                 android:layout_rowWeight="1"
                 android:clickable="true"
@@ -155,7 +159,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="14dp"
                     android:orientation="vertical">
 
                     <TextView
