--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#390000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="autocomplete_foreground_color">#000000</color>
+    <color name="lightColor">#bf6969</color>
+    <color name="normalColor">#4e0000</color>
 </resources>
