--- a/app/src/main/res/layout/fragment_department.xml
+++ b/app/src/main/res/layout/fragment_department.xml
@@ -1,148 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".DepartmentFragment"
-    android:padding="10dp">
+    android:padding="10dp"
+    tools:context=".DepartmentFragment">
+
+    <TextView
+        android:id="@+id/headingDepartment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:text="Choose department"
+        android:textAppearance="@style/Theme.AppCompat"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
+    <Spinner
+        android:id="@+id/spinnerDepartmentsUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/headingDepartment"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:entries="@array/departments"
+        android:prompt="@string/department_prompt"
+        android:spinnerMode="dialog" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/spinnerDepartmentsUser"
+        android:layout_marginTop="20dp">
 
-        <RelativeLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/lightColor"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
 
-            <TextView
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Departments"
-                android:gravity="center_horizontal"
-                android:textSize="40dp"
-                android:textStyle="bold"
-                android:textAppearance="@style/Theme.AppCompat"
-                android:id="@+id/headingDepartment"
-                />
+                android:layout_margin="10dp">
 
-            <Spinner
-                android:id="@+id/spinnerDepartmentsUser"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/headingDepartment"
-                android:entries="@array/departments"
-                android:spinnerMode="dialog"
-                android:prompt="@string/department_prompt"/>
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/spinnerDepartmentsUser"
-                android:gravity="center"
-                android:text="HOD"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:textStyle="bold" />
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/cardViewHOD"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/textView2"
-                android:padding="8dp">
-
-                <RelativeLayout
+                <TextView
+                    android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp">
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:gravity="left"
+                    android:text="HOD"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/hodNameTextView"
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cardViewHOD"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView2"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:padding="8dp"
+                    app:cardBackgroundColor="@color/normalColor"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp">
+
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:text="HOD Name"
-                        android:textSize="25sp"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+                        android:padding="5dp">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/hodDescription"
-                        android:layout_below="@+id/hodNameTextView"
-                        android:gravity="center"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                        android:text="Description"
-                        android:textSize="20sp"
-                        android:visibility="gone"/>
+                        <TextView
+                            android:id="@+id/hodNameTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="HOD Name"
+                            android:textStyle="bold"
+                            android:textColor="#ffffff"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                            android:textSize="25sp" />
 
-                </RelativeLayout>
+                        <TextView
+                            android:id="@+id/hodDescription"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/hodNameTextView"
+                            android:gravity="center"
+                            android:text="Description"
+                            android:textColor="#ffffff"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                            android:textSize="20sp"
+                            android:visibility="gone" />
 
-            </android.support.v7.widget.CardView>
+                    </RelativeLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textViewProfessors"
-                android:layout_below="@+id/cardViewHOD"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="Professors"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:textStyle="bold"/>
+                </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/recyclerViewProfessors"
-                android:layout_below="@+id/textViewProfessors">
-            </android.support.v7.widget.RecyclerView>
+                <TextView
+                    android:id="@+id/textViewProfessors"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/cardViewHOD"
+                    android:layout_marginTop="20dp"
+                    android:gravity="left"
+                    android:text="PROFESSORS"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textViewAssociateProfessors"
-                android:layout_below="@+id/recyclerViewProfessors"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="Associate Professors"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:textStyle="bold"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerViewProfessors"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textViewProfessors"></android.support.v7.widget.RecyclerView>
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/recyclerViewAssociateProfessors"
-                android:layout_below="@+id/textViewAssociateProfessors">
-            </android.support.v7.widget.RecyclerView>
+                <TextView
+                    android:id="@+id/textViewAssociateProfessors"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/recyclerViewProfessors"
+                    android:layout_marginTop="20dp"
+                    android:gravity="left"
+                    android:text="ASSOCIATE PROFESSOR"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textViewAssistantProfessors"
-                android:layout_below="@+id/recyclerViewAssociateProfessors"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="Assistant Professors"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:textStyle="bold"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerViewAssociateProfessors"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textViewAssociateProfessors"></android.support.v7.widget.RecyclerView>
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/recyclerViewAssistantProfessors"
-                android:layout_below="@+id/textViewAssistantProfessors">
-            </android.support.v7.widget.RecyclerView>
+                <TextView
+                    android:id="@+id/textViewAssistantProfessors"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/recyclerViewAssociateProfessors"
+                    android:layout_marginTop="20dp"
+                    android:gravity="left"
+                    android:text="ASSISTANT PROFESSOR"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                    android:textStyle="bold" />
 
-        </RelativeLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerViewAssistantProfessors"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textViewAssistantProfessors"></android.support.v7.widget.RecyclerView>
+
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
 
     </ScrollView>
 
