--- a/app/src/main/res/layout/list_item_user_assistant_professors.xml
+++ b/app/src/main/res/layout/list_item_user_assistant_professors.xml
@@ -2,7 +2,11 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="8dp"
+    app:cardBackgroundColor="@color/normalColor"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,6 +18,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/userAssistantProfessorTextView"
             android:text="Name"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
             android:gravity="center"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
 
@@ -24,6 +30,7 @@
             android:gravity="center"
             android:layout_below="@+id/userAssistantProfessorTextView"
             android:text="Description"
+            android:textColor="#ffffff"
             android:textSize="20sp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
 
