--- a/app/src/main/res/layout/list_item_user_professor.xml
+++ b/app/src/main/res/layout/list_item_user_professor.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="@color/normalColor"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,7 +17,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/userProfessorTextView"
             android:text="Name"
+            android:textColor="#ffffff"
             android:gravity="center"
+            android:textStyle="bold"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
 
         <TextView
@@ -23,6 +29,7 @@
             android:gravity="center"
             android:layout_below="@+id/userProfessorTextView"
             android:text="Description"
+            android:textColor="#ffffff"
             android:textSize="20sp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
 
