delete added in question list

--- a/app/src/main/res/layout/activity_user_professional_first.xml
+++ b/app/src/main/res/layout/activity_user_professional_first.xml
@@ -165,6 +165,13 @@
 
     </ScrollView>
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/loaderProgressBar"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/changeProfession"
         android:layout_width="wrap_content"
