--- a/app/src/main/res/layout/activity_new_question.xml
+++ b/app/src/main/res/layout/activity_new_question.xml
@@ -4,104 +4,105 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewQuestionActivity"
-    android:padding="10dp">
+    android:padding="10dp"
+    tools:context=".NewQuestionActivity">
 
-    <android.support.v7.widget.CardView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp">
-        <LinearLayout
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@color/lightColor"
-            android:padding="10dp">
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Fill the required fields to add a question"
-                android:textColor="#ffffff"
-                android:textSize="15dp"/>
-
-            <android.support.design.widget.TextInputEditText
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:id="@+id/addQuestionEditText"
-                android:hint="Question"
-                android:textColorHint="#000000"/>
+                android:layout_height="match_parent"
+                android:background="@color/lightColor"
+                android:orientation="vertical"
+                android:padding="10dp">
 
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:id="@+id/addOptionAEditText"
-                android:hint="Option A"
-                android:textColorHint="#000000"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Fill the required fields to add a question"
+                    android:textColor="#ffffff"
+                    android:textSize="15dp" />
 
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:id="@+id/addOptionBEditText"
-                android:hint="Option B"
-                android:textColorHint="#000000"/>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/addQuestionEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Question"
+                    android:textColorHint="#000000" />
 
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:id="@+id/addOptionCEditText"
-                android:hint="Option C"
-                android:textColorHint="#000000"/>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/addOptionAEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Option A"
+                    android:textColorHint="#000000" />
 
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:id="@+id/addOptionDEditText"
-                android:hint="Option D"
-                android:textColorHint="#000000"/>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/addOptionBEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Option B"
+                    android:textColorHint="#000000" />
 
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:id="@+id/correctOptionSpinner"
-                android:entries="@array/correctOption"
-                android:spinnerMode="dropdown"
-                >
-            </Spinner>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/addOptionCEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Option C"
+                    android:textColorHint="#000000" />
 
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:id="@+id/addExplanationEditText"
-                android:hint="Explanation"
-                android:textColorHint="#000000"/>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/addOptionDEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Option D"
+                    android:textColorHint="#000000" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
-                android:id="@+id/submitQuestionButton"
-                android:text="Submit"
-                android:textColor="#ffffff"
-                android:background="@color/normalColor"
-                android:textSize="20dp"
-                android:layout_weight="1"
-                />
+                <Spinner
+                    android:id="@+id/correctOptionSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:entries="@array/correctOption"
+                    android:spinnerMode="dropdown"></Spinner>
 
-        </LinearLayout>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/addExplanationEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Explanation"
+                    android:textColorHint="#000000" />
 
-    </android.support.v7.widget.CardView>
+                <Button
+                    android:id="@+id/submitQuestionButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:layout_weight="1"
+                    android:background="@color/normalColor"
+                    android:text="Submit"
+                    android:textColor="#ffffff"
+                    android:textSize="20dp" />
 
+            </LinearLayout>
 
+        </android.support.v7.widget.CardView>
+    </ScrollView>
 
 </RelativeLayout>
