--- a/app/src/main/res/layout/activity_sets_altering.xml
+++ b/app/src/main/res/layout/activity_sets_altering.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,53 +7,159 @@
     tools:context=".SetsAlteringActivity"
     android:padding="10dp">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/newSetTextView"
-        android:text="Add New Set"
-        android:gravity="center_horizontal"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        android:textAppearance="@style/Theme.AppCompat" />
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/setNameLayout"
-        android:layout_below="@+id/newSetTextView"
-        android:layout_marginHorizontal="20dp">
-
-        <android.support.design.widget.TextInputEditText
+        android:layout_height="match_parent">
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/setEditText"
-            android:hint="Enter Set name"
-            android:layout_marginTop="30dp" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/setNameLayout"
-        android:layout_marginTop="50dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        android:layout_marginHorizontal="30dp"
-        android:id="@+id/cardViewToSelect"
-        android:background="#000000">
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/submitSetButton"
-            android:text="submit"
-            android:background="#da4444"
-            android:textColor="#ffffff"
+            android:id="@+id/newSetTextView"
+            android:text="Add New Set"
+            android:gravity="center_horizontal"
+            android:textSize="28sp"
             android:textStyle="bold"
-            android:textSize="20sp" />
+            android:textAppearance="@style/Theme.AppCompat" />
 
-    </android.support.v7.widget.CardView>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/setNameLayout"
+            android:layout_below="@+id/newSetTextView"
+            android:layout_marginHorizontal="20dp">
 
-</RelativeLayout>
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/setEditText"
+                android:hint="Enter Set name"
+                android:layout_marginTop="30dp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/setNameLayout"
+            android:layout_marginTop="50dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
+            android:layout_marginHorizontal="30dp"
+            android:id="@+id/cardViewToSelect"
+            android:background="#000000">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/submitSetButton"
+                android:text="submit"
+                android:background="@color/normalColor"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
+                android:textSize="20sp" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/cardViewAddQuestion"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/cardViewToSelect"
+            android:visibility="gone"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="@color/lightColor"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Fill the required fields to add a question"
+                    android:textColor="#ffffff"
+                    android:textSize="15dp"/>
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/addQuestionEditText"
+                    android:hint="Question"
+                    android:textColorHint="#000000"/>
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/addOptionAEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Option A"
+                    android:textColorHint="#000000" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/addOptionBEditText"
+                    android:hint="Option B"
+                    android:textColorHint="#000000"/>
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/addOptionCEditText"
+                    android:hint="Option C"
+                    android:textColorHint="#000000"/>
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/addOptionDEditText"
+                    android:hint="Option D"
+                    android:textColorHint="#000000"/>
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/correctOptionSpinner"
+                    android:entries="@array/correctOption"
+                    android:spinnerMode="dropdown"
+                    >
+                </Spinner>
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/addExplanationEditText"
+                    android:hint="Explanation"
+                    android:textColorHint="#000000"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:id="@+id/submitQuestionButton"
+                    android:text="Submit"
+                    android:textColor="#ffffff"
+                    android:background="@color/normalColor"
+                    android:textSize="20dp"
+                    android:layout_weight="1"
+                    />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+    </RelativeLayout>
+
+
+</ScrollView>
