--- a/app/src/main/res/layout/list_item_questions.xml
+++ b/app/src/main/res/layout/list_item_questions.xml
@@ -2,14 +2,31 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_marginTop="10dp"
+    >
 
-    <TextView
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewQuestionName"
-        android:text="Question Name"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:layout_gravity="center"/>
+        android:padding="10dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewQuestionName"
+            android:text="Question Name"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:layout_gravity="center"
+            android:layout_toLeftOf="@+id/deleteQuestion"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_delete_black"
+            android:layout_alignParentRight="true"
+            android:id="@+id/deleteQuestion"/>
+
+    </RelativeLayout>
+
+
 
 </android.support.v7.widget.CardView>
