--- a/app/src/main/res/layout/content_user_profile.xml
+++ b/app/src/main/res/layout/content_user_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,12 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".UserProfile"
     tools:showIn="@layout/app_bar_user_profile"
+    android:background="#ffffff"
     android:id="@+id/flMain">
 
-</android.support.constraint.ConstraintLayout>
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/loader" />
+
+</RelativeLayout>
