feedback form added and login page design changed

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,9 +7,17 @@
     tools:context=".RegisterActivity"
     android:padding="15dp">
 
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/logoImageView"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/scb_medical_college_logo"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/logoImageView"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:orientation="vertical"
@@ -22,7 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="User Registration"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -136,6 +145,8 @@
             android:layout_marginTop="15dp"
             android:text="Already registered? Sign in here"
             android:textAlignment="center"
+            android:textColor="#0854ba"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
