--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@drawable/main_activity_background">
+    tools:context=".MainActivity">
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/logoImageView"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/scb_medical_college_logo"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/logoImageView"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
-
 
         <TextView
             android:id="@+id/textView"
@@ -29,7 +35,8 @@
             android:textStyle="bold"
             android:autoSizeMaxTextSize="60dp"
             android:autoSizeMinTextSize="30dp"
-            style="@style/Base.TextAppearance.AppCompat.Body1"/>
+            style="@style/Base.TextAppearance.AppCompat.Body1"
+            android:visibility="gone"/>
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/buttonGoogle"
@@ -38,7 +45,8 @@
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
-            android:layout_marginTop="15dp" />
+            android:layout_marginTop="15dp"
+            android:visibility="gone"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -62,7 +70,6 @@
                 android:layout_margin="15dp"
                 android:hint="Email"
                 android:textColorHint="#ffffff"
-                android:textColor="#ffffff"
                 android:inputType="textEmailAddress" />
 
         </android.support.design.widget.TextInputLayout>
@@ -79,7 +86,6 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:textColorHint="#ffffff"
-                android:textColor="#ffffff"
                 android:hint="Password"
                 android:inputType="textPassword" />
 
@@ -102,10 +108,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="Don't have an account. Sign up here"
+            android:text="Don't have an account? Sign up here"
             android:textAlignment="center"
             android:onClick="signUpClicked"
-            android:textStyle="bold|italic"
+            android:textStyle="bold"
             android:textColor="#0854ba"
             android:textSize="15dp"/>
 
