--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,6 +110,17 @@
                 android:text="Login" />
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewResetPassword"
+                android:text="Forgot Password?"
+                android:layout_margin="15dp"
+                android:textAlignment="center"
+                android:textColor="#0854ba"
+                android:textSize="15dp"
+                android:textStyle="bold"/>
+
+            <TextView
                 android:id="@+id/textViewSignUp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
