--- a/app/src/main/res/layout/activity_professional4th.xml
+++ b/app/src/main/res/layout/activity_professional4th.xml
@@ -319,8 +319,7 @@
                 android:clickable="true"
                 app:cardBackgroundColor="#4c97e7"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="8dp"
-                android:visibility="gone">
+                app:cardElevation="8dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
